--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ dependencies {
     implementation("androidx.cardview:cardview:1.0.0")
     implementation("androidx.appcompat:appcompat:1.6.1")
 
-
+    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 
@@ -80,6 +80,17 @@ dependencies {
 
     // gson
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
+    // Koin for Android
+
+    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
+
+
+
 
 
 }
