--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,9 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.compose.material3:material3'
     implementation platform('androidx.compose:compose-bom:2023.08.00')
+    implementation 'androidx.room:room-common:2.6.1'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    implementation 'com.google.android.material:material:1.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -89,6 +92,7 @@ dependencies {
 
     implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
 
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
 
 
