--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -61,6 +62,9 @@ dependencies {
     implementation platform('androidx.compose:compose-bom:2023.08.00')
     implementation 'androidx.room:room-common:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
+    implementation "androidx.room:room-runtime:2.6.1"
+    //noinspection KaptUsageInsteadOfKsp
+    kapt "androidx.room:room-compiler:2.6.1"
     implementation 'com.google.android.material:material:1.11.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
