--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,9 +16,7 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        vectorDrawables {
-            useSupportLibrary true
-        }
+        vectorDrawables.useSupportLibrary = true
     }
 
     buildTypes {
@@ -35,70 +33,69 @@ android {
         jvmTarget = '1.8'
     }
     buildFeatures {
-        compose true
+        compose = true
+        viewBinding = true
     }
     composeOptions {
         kotlinCompilerExtensionVersion '1.5.1'
     }
-    packaging {
-        resources {
-            excludes += '/META-INF/{AL2.0,LGPL2.1}'
-        }
+    packagingOptions {
+        resources.excludes += '/META-INF/{AL2.0,LGPL2.1}'
     }
 }
 
 dependencies {
-
     implementation 'androidx.core:core-ktx:1.12.0'
-    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
-    implementation 'androidx.activity:activity-compose:1.8.2'
-    implementation platform('androidx.compose:compose-bom:2023.08.00')
-    implementation 'androidx.compose.ui:ui'
-    implementation 'androidx.compose.ui:ui-graphics'
-    implementation 'androidx.compose.ui:ui-tooling-preview'
-    implementation 'androidx.constraintlayout:constraintlayout-compose:1.1.0-alpha13'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.compose.material3:material3'
-    implementation platform('androidx.compose:compose-bom:2023.08.00')
-    implementation 'androidx.room:room-common:2.6.1'
-    implementation 'androidx.room:room-ktx:2.6.1'
-    implementation "androidx.room:room-runtime:2.6.1"
-    //noinspection KaptUsageInsteadOfKsp
-    kapt "androidx.room:room-compiler:2.6.1"
+    implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    // ViewModel, LiveData
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
+
+    // Navigation Component
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
+
+    // Room Database
+    implementation 'androidx.room:room-runtime:2.6.1'
+    implementation 'androidx.room:room-ktx:2.6.1'
+    //noinspection KaptUsageInsteadOfKsp
+    kapt 'androidx.room:room-compiler:2.6.1'
+
+    // Kotlin Coroutines
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+
+    // Retrofit for network requests
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
+
+    // RxJava
+    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+
+    // Koin for dependency injection
+    implementation 'io.insert-koin:koin-android:3.2.0'
+    // Picasso for image loading
+    implementation 'com.squareup.picasso:picasso:2.8'
+
+    // Shimmer for loading effects
+    implementation 'com.facebook.shimmer:shimmer:0.5.0'
+
+    // Testing Libraries
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
-    androidTestImplementation platform('androidx.compose:compose-bom:2023.08.00')
-    debugImplementation 'androidx.compose.ui:ui-tooling'
-    debugImplementation 'androidx.compose.ui:ui-test-manifest'
-    implementation("androidx.recyclerview:recyclerview:1.3.2")
-    implementation("androidx.cardview:cardview:1.0.0")
-    implementation("androidx.appcompat:appcompat:1.6.1")
 
-    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
-    // retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    // Compose Testing
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.0'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.0'
 
-    // Picasso for image link
-    implementation 'com.squareup.picasso:picasso:2.8'
-
-    // gson
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-
-    implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
+    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
-    implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
-
-    // Koin for Android
-
-    implementation 'io.insert-koin:koin-androidx-compose:3.2.0'
-
-    implementation 'com.facebook.shimmer:shimmer:0.5.0'
-
-
-
-
 }
