--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,7 @@ android {
     packagingOptions {
         resources.excludes += '/META-INF/{AL2.0,LGPL2.1}'
     }
+    buildToolsVersion '34.0.0'
 }
 
 dependencies {
@@ -68,7 +69,7 @@ dependencies {
     kapt 'androidx.room:room-compiler:2.6.1'
 
     // Kotlin Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.1'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
     // Retrofit for network requests
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -77,12 +78,12 @@ dependencies {
 
     // RxJava
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
 
     // Koin for dependency injection
-    implementation 'io.insert-koin:koin-android:3.2.0'
+    implementation 'io.insert-koin:koin-android:3.5.3'
     // Picasso for image loading
-    implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // Shimmer for loading effects
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
@@ -96,6 +97,6 @@ dependencies {
     debugImplementation 'androidx.compose.ui:ui-tooling:1.6.0'
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.0'
 
-    implementation 'io.reactivex.rxjava3:rxjava:3.0.6'
-    implementation 'io.reactivex.rxjava3:rxandroid:3.0.0'
+    implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
+    implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
 }
