--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,11 +26,11 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
     }
     kotlinOptions {
-        jvmTarget = '1.8'
+        jvmTarget = '17'
     }
     buildFeatures {
         compose = true
@@ -42,7 +42,6 @@ android {
     packagingOptions {
         resources.excludes += '/META-INF/{AL2.0,LGPL2.1}'
     }
-    buildToolsVersion '34.0.0'
 }
 
 dependencies {
@@ -53,49 +52,35 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.3.2'
     implementation 'androidx.cardview:cardview:1.0.0'
 
-    // ViewModel, LiveData
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
 
-    // Navigation Component
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.6'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.6'
 
-    // Room Database
     implementation 'androidx.room:room-runtime:2.6.1'
     implementation 'androidx.room:room-ktx:2.6.1'
     //noinspection KaptUsageInsteadOfKsp
     kapt 'androidx.room:room-compiler:2.6.1'
 
-    // Kotlin Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3'
 
-    // Retrofit for network requests
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava3:2.9.0'
 
-    // RxJava
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
 
-    // Koin for dependency injection
     implementation 'io.insert-koin:koin-android:3.5.3'
-    // Picasso for image loading
+
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-    // Shimmer for loading effects
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
 
-    // Testing Libraries
-    testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
-
-    // Compose Testing
-    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.0'
-    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.0'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.6.1'
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.6.1'
 
     implementation 'io.reactivex.rxjava3:rxjava:3.1.8'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
