--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,6 +75,8 @@ dependencies {
     implementation 'io.reactivex.rxjava3:rxkotlin:3.0.1'
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
 
+    implementation 'androidx.exifinterface:exifinterface:1.3.7'
+
     implementation 'io.insert-koin:koin-android:3.5.3'
 
     implementation 'com.squareup.picasso:picasso:2.71828'
